Fix alignment of hr

--- a/sass/style.scss
+++ b/sass/style.scss
@@ -239,6 +239,7 @@ hr {
     font-size: 33px;
     line-height: 0;
     text-align: center;
+    text-indent: 40px;
     letter-spacing: 40px;
     color: $scheme;
   }
